--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta property="og:image" content="https://pjfernandes.github.io/coordinates-finder/logo.png">
-  <meta name="description" content="Bicicletário finder">
+  <meta name="description" content="Bicicletário finder - Encontre o bicicletário mais próximo!">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -29,7 +30,7 @@
           <form>
             <div class="mt-3 d-flex justify-content-center">
               <input type="search" class="form-control form-control-lg" id="address-input"
-                placeholder="Digite o endereço" />
+                placeholder="Digite o endereço"/>
 
               <button type="submit" class="ml-2 btn btn-primary">OK</button>
             </div>
