search and display results done

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
               <input type="search" class="form-control form-control-lg" id="address-input"
                 placeholder="Digite o endereço"/>
 
-              <button type="submit" class="ml-2 btn btn-primary">OK</button>
+              <button type="submit" class="ml-2 btn btn-primary" id="button">OK</button>
             </div>
           </form>
         </div>
 
-        <p class="results text-center mt-3"></p>
-
-        <div class="text-center">
+        <div class="text-center mt-3">
           <div style="height: 280px">
             <div class="border border-primary" id="map" style="height: 280px"></div>
           </div>
         </div>
+
+        <div class="results text-center mt-3" id="results"></div>
 
 
         <div class="footer">
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-  <script src="./app.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
