--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="mt-2 col-12 col-lg-6">
         <div class="d-flex justify-content-center">
           <h2><i class="logo fas fa-bicycle text-primary"></i>
- <h3 class="title text-dark mt-3">&nbspBicicletário finder (<span class="text-primary">RJ</span>)</h3>
+ <h3 class="title text-dark mt-3">&nbspBike Finder (<span class="text-primary">RJ</span>)</h3>
         </div>
 
         <div class="form text-center">
@@ -48,10 +48,10 @@
 
         <div class="footer">
           <div class="footer-links">
-            <a href="https://github.com/pjfernandes/coordinates-finder"><i class="fab fa-github"></i></a>
-            <a href="https://consiliumdata.herokuapp.com/"><i class="fas fa-home"></i></a>
+            <a href="https://github.com/pjfernandes/bike-finder"><i class="fab fa-github"></i></a>
+            <a href="https://pjfernandes.github.io/bike-finder/"><i class="fas fa-home"></i></a>
           </div>
-          <div class="footer-copyright"><a href="https://consiliumdata.herokuapp.com/" class="text-primary">Bicicletário finder</a> <i class="far fa-copyright danger"></i>
+          <div class="footer-copyright"><a href="https://pjfernandes.github.io/bike-finder/" class="text-primary">Bike Finder</a> <i class="far fa-copyright danger"></i>
           </div>
         </div>
       </div>
