--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta property="og:image" content="https://pjfernandes.github.io/coordinates-finder/logo.png">
   <meta name="description" content="Bicicletário finder - Encontre o bicicletário mais próximo!">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -14,7 +13,7 @@
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" href="css/style.css">
-  <title>Bicicletário finder</title>
+  <title>Bike finder</title>
 </head>
 
 <body>
