--- a/index.html
+++ b/index.html
@@ -38,11 +38,18 @@
 
         <div class="text-center mt-3">
           <div style="height: 280px">
-            <div class="border border-primary" id="map" style="height: 280px"></div>
+            <div class="" id="map" style="height: 280px"></div>
+            <div class="bg-white text-center mb-2" id='legend'>
+              <span class="ml-1 text-secondary pb-4">
+                <i class="fas fa-map-marker-alt text-info"></i>&nbspBicicletários &nbsp&nbsp <i class="fas fa-map-marker-alt text-danger"></i>&nbspSua localização
+              </span>
+            </div>
           </div>
         </div>
 
-        <div class="results text-center mt-3" id="results"></div>
+
+
+        <div class="results text-center mt-4" id="results"></div>
 
 
         <div class="footer">
