--- a/index.html
+++ b/index.html
@@ -17,13 +17,23 @@
 </head>
 
 <body>
+<div class="navbar navbar-expand-sm navbar-light navbar-bike">
+  <div class="container-fluid">
+    <div class="navbar-brand text-center">
+          <div class="d-flex justify-content-center text-center">
+            <h2><i class="logo fas fa-bicycle text-warning ml-2 border border-white rounded p-1"></i></h2>
+            <h3 class="title text-white mt-3 pt-1">&nbspBike Finder <span class="text-warning">RJ</span></h3>
+          </div>
+    </div>
+    </a>
+  </div>
+</div>
+
+
+
   <div class="container">
     <div class="row justify-content-center">
       <div class="mt-2 col-12 col-lg-6">
-        <div class="d-flex justify-content-center">
-          <h2><i class="logo fas fa-bicycle text-primary"></i>
- <h3 class="title text-dark mt-3">&nbspBike Finder (<span class="text-primary">RJ</span>)</h3>
-        </div>
 
         <div class="form text-center">
           <form>
