--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<div class="navbar navbar-expand-sm navbar-light navbar-bike">
+<div class="navbar navbar-expand-sm navbar-light navbar-bike fixed-top">
   <div class="container-fluid">
     <div class="navbar-brand text-center">
           <div class="d-flex justify-content-center text-center">
@@ -31,7 +31,7 @@
 
 
 
-  <div class="container">
+  <div class="container mt-5 pt-5">
     <div class="row justify-content-center">
       <div class="mt-2 col-12 col-lg-6">
 
